Add BONUS style with Bootstrap

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 </head>
 <body>
 
-    <div class="container mt-5">
-        <ul class="email-list">
-            <li class="email">ciao@email.it</li>
+    <div class="container mt-5 text-center">
+        <h3 class="border p-2 rounded">Your random list of emails</h3>
+        <ul class="email-list list-group border rounded p-2 justify-content-center" style="min-height: 260px;">
+            <span class="fw-bold">The random mail list will appear here in seconds</span>
+           <!--  <li class="email">ciao@email.it</li> -->
         </ul>
+        <h5 class="mt-5">Click the button for generate 10 random emails again</h5>
+        <button class="btn btn-primary">Generate</button>
     </div>
 
 
